--- a/index.html
+++ b/index.html
@@ -306,15 +306,15 @@
     </div>
 
     <script>
-       // document.addEventListener('DOMContentLoaded', function() {
-           // const inputText = document.getElementById('inputText');
-          //  const outputText = document.getElementById('outputText');
-          //  const formatBtn = document.getElementById('formatBtn');
-           // const copyBtn = document.getElementById('copyBtn');
-         //   const clearBtn = document.getElementById('clearBtn');
-          //  const inputCount = document.getElementById('inputCount');
-        //    const outputCount = document.getElementById('outputCount');
-         //   const notification = document.getElementById('notification');
+       document.addEventListener('DOMContentLoaded', function() {
+           const inputText = document.getElementById('inputText');
+          const outputText = document.getElementById('outputText');
+           const formatBtn = document.getElementById('formatBtn');
+           const copyBtn = document.getElementById('copyBtn');
+          const clearBtn = document.getElementById('clearBtn');
+           const inputCount = document.getElementById('inputCount');
+           const outputCount = document.getElementById('outputCount');
+           const notification = document.getElementById('notification');
             
             // Update input count when text changes
             inputText.addEventListener('input', function() {
