--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     </div>
 
     <div class="btn-box">
-      <a href="YOUR-NUMBER-CONVERTER-LINK" class="button">
+      <a href="https://zero2webcreative.blogspot.com/?m=1" class="button">
         Number Convert Tool
       </a>
 
@@ -153,11 +153,11 @@
 
     <!-- ✅ SOCIAL ICONS -->
     <div class="social">
-      <a href="#"><i class="fab fa-telegram"></i></a>
-      <a href="#"><i class="fab fa-instagram"></i></a>
+      <a href="https://t.me/zero2webofficial"><i class="fab fa-telegram"></i></a>
+      <a href="https://www.instagram.com/zero2web?igsh=djR1MG15bDhmNW0z"><i class="fab fa-instagram"></i></a>
       <a href="#"><i class="fab fa-youtube"></i></a>
       <a href="#"><i class="fab fa-github"></i></a>
-      <a href="#"><i class="fab fa-whatsapp"></i></a>
+      <a href="https://whatsapp.com/channel/0029VamwrdeJJhzWsvg6Tr1f"><i class="fab fa-whatsapp"></i></a>
     </div>
 
     <footer>© 2025 Zero 2 Web — All Rights Reserved</footer>
