--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     </div>
 
     <div class="btn-box">
-      <a href="https://zero2webcreative.blogspot.com/?m=1" class="button">
+      <a href="https://zero2webcreative.blogspot.com/" target="_blank" class="button">
         Number Convert Tool
       </a>
 
